--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 REDIS_HOST=localhost
 REDIS_PORT=6379
-EMAIL_HOST=smtp.example.com
-EMAIL_PORT=587
-EMAIL_SERVICE=gmail
+
+EMAIL_HOST=gmail
 EMAIL_USER=esta72143@gmail.com
 EMAIL_PASSWORD=wpxe jibk yney omlw
+EMAIL_SERVICE=smtp.gmail.com
+EMAIL_PORT=587
