--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "bull": "^4.10.2",
     "nodemailer": "^6.9.16",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "@nestjs-modules/mailer": "^1.7.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
