--- a/package.json
+++ b/package.json
@@ -20,16 +20,18 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/bull": "^0.6.2",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^8.0.4",
     "bull": "^4.10.2",
     "nodemailer": "^6.9.16",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "@nestjs-modules/mailer": "^2.0.2"
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
