--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^8.0.4",
     "bull": "^4.10.2",
+    "class-validator": "^0.14.1",
     "nodemailer": "^6.9.16",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
